fix(feat-notif): Handle z-index bug

--- a/style/modal.css
+++ b/style/modal.css
@@ -10,7 +10,7 @@
 .modal--open {
   top: 50%;
   opacity: 1;
-  z-index: 5;
+  z-index: 200;
 }
 .modal__overlay {
   opacity: 0;
@@ -21,7 +21,7 @@
   height: 100vh;
   background: rgba(238, 228, 218, 0.5);
   transition: opacity 500ms;
-  z-index: 5;
+  z-index: 200;
 }
 .modal__overlay--open {
   opacity: 0.5;
